<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimary"
    tools:context=".SelectOptionAuthActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_cars_inicio"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_seleccione_opcion"
            android:textAlignment="center"
            android:textSize="@dimen/size_20"
            android:textColor="@android:color/white"
            android:layout_margin="@dimen/margin_40"
            android:textStyle="bold" />

            <Button
                android:id="@+id/btnYaCuenta"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_55"
                android:backgroundTint="@color/bg_btn_conductor"
                android:background="@drawable/rounded_btn_driver_client"
                android:text="@string/btn_tengo_cuenta"
                android:padding="@dimen/padding_10"
                android:textSize="@dimen/size_18"
                android:layout_marginEnd="@dimen/margin_20"
                android:layout_marginStart="@dimen/margin_20"/>

            <Button
                android:id="@+id/btnRegistrarClient"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_55"
                android:backgroundTint="@color/color_white"
                android:background="@drawable/rounded_btn_driver_client"
                android:textColor="@color/color_black"
                android:text="@string/btn_registrarme"
                android:padding="@dimen/padding_10"
                android:textSize="@dimen/size_18"
                android:layout_marginTop="@dimen/margin_top_10"
                android:layout_marginEnd="@dimen/margin_20"
                android:layout_marginStart="@dimen/margin_20"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>