<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="@dimen/margin_70"
            android:src="@drawable/ic_cars_inicio"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_inicio"
            android:textAlignment="center"
            android:textSize="@dimen/size_20"
            android:textColor="@android:color/white"
            android:layout_margin="@dimen/margin_40"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="@dimen/size_20"
            android:gravity="bottom">

            <Button
                android:id="@+id/btnAmDriver"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/height_55"
                android:backgroundTint="@color/bg_btn_conductor"
                android:background="@drawable/rounded_btn_driver_client"
                android:text="@string/btn_soy_conductor"
                android:padding="@dimen/padding_10"
                android:textSize="@dimen/size_16"
                android:layout_marginEnd="@dimen/margin_end_5"/>

            <Button
                android:id="@+id/btnAmClient"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/height_55"
                android:background="@drawable/my_shape"
                android:backgroundTint="@color/color_white"
                android:textColor="@color/color_black"
                android:text="@string/btn_soy_client"
                android:padding="@dimen/padding_10"
                android:textSize="@dimen/size_18"
                android:layout_marginStart="@dimen/margin_end_5"/>

        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>