<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.driver.RegisterDriverActivity">

    <include layout="@layout/action_bar_toolbar"></include>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_55"
            tools:background="@android:color/holo_blue_light"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="@dimen/margin_10">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_user_login"
                android:paddingEnd="@dimen/padding_5d"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_60"
                tools:background="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tieName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_nombre"
                    android:inputType="textPersonName"
                    android:textSize="@dimen/size_18">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_55"
            tools:background="@android:color/holo_blue_light"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="@dimen/margin_10">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_email"
                android:paddingEnd="@dimen/padding_5d" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_60"
                tools:background="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tieEmailDriver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/size_18">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_55"
            tools:background="@android:color/holo_blue_light"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="@dimen/margin_10">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_clave"
                android:paddingEnd="@dimen/padding_5d" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_60"
                tools:background="@color/colorPrimary"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiePwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:textSize="@dimen/size_18">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_55"
            tools:background="@android:color/holo_blue_light"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="@dimen/margin_10">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_clave"
                android:paddingEnd="@dimen/padding_5d" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_60"
                tools:background="@color/colorPrimary"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tieConfirmPwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_confirm_password"
                    android:inputType="textPassword"
                    android:textSize="@dimen/size_18">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_55"
            tools:background="@android:color/holo_blue_light"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="@dimen/margin_10">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_coche_driver"
                android:paddingEnd="@dimen/padding_5d" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_60"
                tools:background="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tieVehicleBrand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_marca"
                    android:inputType="text"
                    android:textSize="@dimen/size_18">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_55"
            tools:background="@android:color/holo_blue_light"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="@dimen/margin_10">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_matricula"
                android:paddingEnd="@dimen/padding_5d" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_60"
                tools:background="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tieVehiclePlate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_placa"
                    android:inputType="text"
                    android:textSize="@dimen/size_18">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom"
            android:layout_margin="@dimen/margin_10">

            <Button
                android:id="@+id/btnRegisterDriver"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_55"
                android:background="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/btn_registrar"
                android:textSize="@dimen/size_18"/>
        </LinearLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>